tests/ui/proc-macro/derive-helper-shadowing.stderr
error: cannot use a derive helper attribute through an import
  --> $DIR/derive-helper-shadowing.rs:42:15
   |
LL |             #[renamed]
   |               ^^^^^^^
   |
note: the derive helper attribute imported here
  --> $DIR/derive-helper-shadowing.rs:41:17
   |
LL |             use empty_helper as renamed;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `empty_helper` in this scope
  --> $DIR/derive-helper-shadowing.rs:38:22
   |
LL |             #[derive(GenHelperUse)]
   |                      ^^^^^^^^^^^^ in this derive macro expansion
   |
  ::: $DIR/auxiliary/derive-helper-shadowing.rs:10:1
   |
LL | pub fn derive_a(_: TokenStream) -> TokenStream {
   | ---------------------------------------------- in this expansion of `#[derive(GenHelperUse)]`
   |
help: consider importing this attribute macro through its public re-export
   |
LL +             use empty_helper;
   |

error: cannot find attribute `empty_helper` in this scope
  --> $DIR/derive-helper-shadowing.rs:14:11
   |
LL | / macro_rules! gen_helper_use {
LL | |     () => {
LL | |         #[empty_helper]
   | |           ^^^^^^^^^^^^
LL | |         struct W;
LL | |     }
LL | | }
   | |_- in this expansion of `gen_helper_use!`
...
LL |               gen_helper_use!();
   |               ----------------- in this macro invocation
   |
help: consider importing this attribute macro through its public re-export
   |
LL +             use crate::empty_helper;
   |

error[E0659]: `empty_helper` is ambiguous
  --> $DIR/derive-helper-shadowing.rs:19:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a derive helper attribute
note: `empty_helper` could refer to the derive helper attribute defined here
  --> $DIR/derive-helper-shadowing.rs:22:10
   |
LL | #[derive(Empty)]
   |          ^^^^^
note: `empty_helper` could also refer to the attribute macro imported here
  --> $DIR/derive-helper-shadowing.rs:10:5
   |
LL | use test_macros::empty_attr as empty_helper;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: use `crate::empty_helper` to refer to this attribute macro unambiguously

warning: derive helper attribute is used before it is introduced
  --> $DIR/derive-helper-shadowing.rs:19:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^
...
LL | #[derive(Empty)]
   |          ----- the attribute is introduced here
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #79202 <https://github.com/rust-lang/rust/issues/79202>
   = note: `#[warn(legacy_derive_helpers)]` on by default

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0659`.
